@@ -1,3 +1,7 @@
+[B]1.3.3[/B]
+- Addonmedia function gets optional media subfolder parameter
+- Removed input dialog function, way more flexible calling dialog class directly
+
 [B]1.3.2[/B]
 - Added try/except block for inputstream adaptive
 
